# ActivityRecognition

Calo/lstm_openpose/: README.md  launch_all_experiments.sh  run.py  training.py  video_statistics.py
Calo/lstm_openpose/3d_pose_estimation/: README.MD
Calo/lstm_openpose/activity_recognition/: README.md
Calo/lstm_openpose/activity_recognition/data/: README.md  class_map.json
Calo/lstm_openpose/activity_recognition/model/: README.MD  class_map.json  config_params.pkl  model.data-00000-of-00001  model.index
Calo/lstm_openpose/conf/: default_redux.json  default_training.json  max_redux_train.json  minimal_no_red_train_for_debug.json  minimal_train_for_debug.json
Calo/lstm_openpose/conf/bal_redux_vs_norm/: bal_7redux_norm.json  bal_no_redux_no_norm.json  bal_no_redux_norm.json  bal_redux_no_norm.json  bal_redux_norm.json  mirr_no_redux_no_norm.json  mirr_no_redux_norm.json  mirr_redux_no_norm.json  mirr_redux_norm.json
Calo/lstm_openpose/conf/mirr_no_bal/: mirr_6redux_norm.json  mirr_7redux_norm.json
Calo/lstm_openpose/conf/mirr_on_no_red/: mirr_no_redux.json  no_mirr_no_redux.json
Calo/lstm_openpose/conf/redux_vs_norm/: no_redux_no_norm.json  no_redux_norm.json  redux_no_norm.json  redux_norm.json
Calo/lstm_openpose/lib/: Makefile  chpe.py  cmake_install.cmake  test.py
Calo/lstm_openpose/pose_estimation/: CMakeLists.txt
Calo/lstm_openpose/pose_estimation/human_pose_estimation_demo/: CMakeLists.txt  main.cpp
Calo/lstm_openpose/pose_estimation/human_pose_estimation_demo/include/: bbox.hpp  camera_hpe.hpp  camera_hpe_proxy.hpp  human_pose.hpp  human_pose_estimation_demo.hpp  render_bbox.hpp  render_human_pose.hpp  std_human_pose.hpp
Calo/lstm_openpose/pose_estimation/human_pose_estimation_demo/python/: CMakeLists.txt  chpe_proxy.i
Calo/lstm_openpose/pose_estimation/human_pose_estimation_demo/src/: bbox.cpp  camera_hpe.cpp  camera_hpe_proxy.cpp  human_pose.cpp  human_pose_estimator.cpp  peak.cpp  render_bbox.cpp  render_human_pose.cpp
Calo/lstm_openpose/runtime_stats/10_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/11_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/12_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/1_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/3_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/4_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/5_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/6_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/7_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/8_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/runtime_stats/9_carosello/: np_stats.npy  other.json
Calo/lstm_openpose/video_statistics/1_persona/: iter_0.npy  iter_1.npy  iter_10.npy  iter_11.npy  iter_12.npy  iter_13.npy  iter_14.npy  iter_15.npy  iter_16.npy  iter_17.npy  iter_18.npy  iter_19.npy  iter_2.npy  iter_3.npy  iter_4.npy  iter_5.npy  iter_6.npy  iter_7.npy  iter_8.npy  iter_9.npy  other0.json  other1.json  other10.json  other11.json  other12.json  other13.json  other14.json  other15.json  other16.json  other17.json  other18.json  other19.json  other2.json  other3.json  other4.json  other5.json  other6.json  other7.json  other8.json  other9.json
Calo/lstm_openpose/video_tag/: README.md
(+1990 files in other folders)
